# comb-opt

./: .gitignore  CMakeLists.txt  README.md
data/: README.md  input.txt  output-iteratively.txt  output-local.txt  output-lp-dfj-weights1.txt  output-lp-dfj-weights10.txt  output-lp-dfj-weights2.txt  output-lp-dfj-weights3.txt  output-lp-dfj-weights5.txt  output-lp-dfj-weights6.txt  output-lp-dfj-weights8.txt  output-milp.txt  output-random.txt  output-spanning.txt
data_large/: output-iteratively.txt  output-random.txt  output-spanning.txt
draw/: cities.py  draw.py  lp_draw.py
tsp/: CMakeLists.txt  iteratively.cpp  local_optimizations.cpp  lp.cpp  lp_dfj.cpp  lp_mtz.cpp  milp_dfj.cpp  milp_mtz.cpp  random.cpp  spanning.cpp  task.cpp  task.h
